Adds link to beautiful cat facts

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ In my free time I like to practice the piano and join game jams. </h5>
 			  		    		</div>
 			  		    		<div class="col-xs-12 col-md-4">
 			  		    			<h2>
-				  		    				<a href="https://github.com/zacharysarette/beautiful-cat-facts" target="blank">beautiful-cat-facts</a>
+				  		    				<a href="https://thirsty-wilson-a455c4.netlify.app/" target="blank">beautiful-cat-facts</a>
 				  		    		</h2>
 			  		    			
 			  		    			
