Adds beautiful cat facts button, Fixes Deteriorating data link

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@ In my free time I like to practice the piano and join game jams. </h5>
 		  	    		</div>
 	  			    		<div class="row text-center" style="margin:20px;">
 	  			    				<a class="btn btn-launch" href="https://github.com/zacharysarette/beautiful-cat-facts" target="blank">View on GitHub</a>
+									<a class="btn btn-launch" href="https://thirsty-wilson-a455c4.netlify.app/" target="blank">Go to Site</a>
 	  		    			</div>
 		  				</div>
 		  		</div>
@@ -197,7 +198,7 @@ In my free time I like to practice the piano and join game jams. </h5>
 			  		    		</div>
 			  		    		<div class="col-xs-12 col-md-4">
 			  		    			<h2>
-				  		    				<a href="https://github.com/zacharysarette/beautiful-cat-facts" target="blank">Deteriorating Dad</a>
+				  		    				<a href="https://zachsarette.itch.io/deterioratingdad" target="blank">Deteriorating Dad</a>
 				  		    		</h2>
 			  		    			
 			  		    			
