Fixes typo, fixes formatting for header 5

--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
 
 			<section class="about">
 				<div class="text-center" style="margin-top:100px">
-					<img src="https://avatars1.githubusercontent.com/u/650130?v&#x3D;4" width=200 class="profile-pic">
-					<h1>Zach Sarette</h1>
-				  <h3>Tokyo, Japan</h3>
-				  <h5>Full Stack Web developer, Former  Full Stack Game Developer. A passion for Automation, Systems, and Tools. 
-
-In my free time I like to practice the piano and join game jams. </h5>
+                                    <img src="https://avatars1.githubusercontent.com/u/650130?v&#x3D;4" width=200 class="profile-pic">
+                                    <h1>Zach Sarette</h1>
+                                    <h3>Tokyo, Japan</h3>
+                                    <h5>Full Stack Web developer, Former Game Developer.</h5>
+                                    <h5>A passion for Automation, Systems, and Tools.</h5>
+                                    <h5>In my free time I like to practice the piano and join game jams.</h5>
 
 				  </div>
 				</div>
@@ -200,7 +200,7 @@ In my free time I like to practice the piano and join game jams. </h5>
 			  		    			
 			  		    			<p>This is a game built for the Global Game Jam 2020</p>
 									<p>I did the art, the web build, and fixed the audio system during the game jam.<p>
-									<p>After the jam, I fixed all of the major bugs, improved the gameplay, ui, and sfx. And finally I localize to English from the original Japanese.</p>
+									<p>After the jam, I fixed all of the major bugs, improved the gameplay, ui, and sfx. And finally I localized the game from Japanese to English.</p>
 			  		    		</div>
 		  		    		
 		  	    		</div>
