Adds piano toy to portfolio seciton

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 		  	    		</div>
 	  			    		<div class="row text-center" style="margin:20px;">
 	  			    				<a class="btn btn-launch" href="https://github.com/zacharysarette/beautiful-cat-facts" target="blank">View on GitHub</a>
-									<a class="btn btn-launch" href="https://thirsty-wilson-a455c4.netlify.app/" target="blank">Go to Site</a>
+									<a class="btn btn-launch" href="https://thirsty-wilson-a455c4.netlify.app/" target="blank">Visit Site</a>
 	  		    			</div>
 		  				</div>
 		  		</div>
@@ -216,8 +216,33 @@
 		  				</div>
 		  		</div>
 
-
-
+		  		<div class="row repo-row">
+		  		    <div class="col-sm-8 col-sm-offset-2">
+		  		    	<div class="row vertical-align">
+			  		    		<div class="col-xs-12 col-md-8">
+			  		    			<img src="https://github.com/zacharysarette/piano-toy/raw/master/screenshots/PianoToyDeskTopScreenShot.PNG" class="img-responsive work-item-img center-block">
+			  		    		</div>
+			  		    		<div class="col-xs-12 col-md-4">
+			  		    			<h2>
+				  		    				<a href="https://fervent-carson-0b2a07.netlify.app" target="blank">Piano Toy</a>
+				  		    		</h2>
+			  		    			
+			  		    			<p>This is a toy piano app made with VueJS and ToneJs</p>
+									<p>Works on both mobile and desktop platforms</p>
+			  		    		</div>
+		  		    		
+		  	    		</div>
+		  	    		<div class="row text-center techUsed">
+		  	    			<div class="col-xs-12">
+		  		    			<i class="devicon-vuejs-plain-wordmark"></i>
+		  	    			</div>
+		  	    		</div>
+	  			    		<div class="row text-center" style="margin:20px;">
+	  			    				<a class="btn btn-launch" href="https://github.com/zacharysarette/piano-toy" target="blank">View on Github</a>
+	  			    				<a class="btn btn-launch" href="https://fervent-carson-0b2a07.netlify.app" target="blank">Visit Site</a>
+	  		    			</div>
+		  				</div>
+		  		</div>
 
 
 			</section>			
