Adds JS icon to piano toy section

--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 		  	    		<div class="row text-center techUsed">
 		  	    			<div class="col-xs-12">
 		  		    			<i class="devicon-vuejs-plain-wordmark"></i>
+		  		    			<i class="devicon-javascript-plain"></i>
 		  	    			</div>
 		  	    		</div>
 	  			    		<div class="row text-center" style="margin:20px;">
