Adds 404 page to portfolio

--- a/index.html
+++ b/index.html
@@ -243,8 +243,34 @@
 	  			    				<a class="btn btn-launch" href="https://fervent-carson-0b2a07.netlify.app" target="blank">Visit Site</a>
 	  		    			</div>
 		  				</div>
-		  		</div>
+					</div>
 
+		  		<div class="row repo-row">
+		  		    <div class="col-sm-8 col-sm-offset-2">
+		  		    	<div class="row vertical-align">
+			  		    		<div class="col-xs-12 col-md-8">
+			  		    			<img src="https://github.com/zacharysarette/a-404-page/blob/master/screenshot.png" class="img-responsive work-item-img center-block">
+			  		    		</div>
+			  		    		<div class="col-xs-12 col-md-4">
+			  		    			<h2>
+				  		    				<a href="https://loving-pike-6e39a5.netlify.app/" target="blank">404 Error</a>
+				  		    		</h2>
+			  		    			
+			  		    			<p>This is a simple responsive 404 error page.</p>
+			  		    		</div>
+		  		    		
+		  	    		</div>
+		  	    		<div class="row text-center techUsed">
+		  	    			<div class="col-xs-12">
+		  		    			<i class="devicon-html5-plain-wordmark colored"></i>
+		  	    			</div>
+		  	    		</div>
+	  			    		<div class="row text-center" style="margin:20px;">
+	  			    				<a class="btn btn-launch" href="https://github.com/zacharysarette/a-404-page" target="blank">View on Github</a>
+	  			    				<a class="btn btn-launch" href="https://loving-pike-6e39a5.netlify.app" target="blank">Visit Site</a>
+	  		    			</div>
+		  				</div>
+		  		</div>
 
 			</section>			
 
