adds alt tag to image

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 		  		    <div class="col-sm-8 col-sm-offset-2">
 		  		    	<div class="row vertical-align">
 			  		    		<div class="col-xs-12 col-md-8">
-			  		    			<img src="https://github.com/zacharysarette/a-404-page/blob/master/screenshot.png" class="img-responsive work-item-img center-block">
+			  		    			<img src="https://raw.githubusercontent.com/zacharysarette/a-404-page/master/screenshot.png" class="img-responsive work-item-img center-block" alt="a 404 page screenshot">
 			  		    		</div>
 			  		    		<div class="col-xs-12 col-md-4">
 			  		    			<h2>
