Adds local images

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="container-fluid">
 		<section class="about">
 			<div class="text-center" style="margin-top:100px">
-				<img src="https://avatars1.githubusercontent.com/u/650130?v&#x3D;4" width=200 class="profile-pic">
+				<img src="/assets/img/profile.png" width=200 class="profile-pic">
 				<h1>Zach Sarette</h1>
 				<h3>Tokyo, Japan</h3>
 				<h5>Full Stack Web developer, Former Game Developer.</h5>
@@ -48,7 +48,8 @@
 				<div class="row vertical-align">
 					<div class="col-xs-12 col-md-8">
 						<img
-							src="https://raw.githubusercontent.com/zacharysarette/beautiful-cat-facts/master/beautiful-cat-facts-desktop-dark.PNG"
+							src="assets/img/beautiful-cat-facts-desktop-dark.png"
+							alt="beautiful-cat-facts screenshot"
 							class="img-responsive work-item-img center-block">
 					</div>
 					<div class="col-xs-12 col-md-4">
@@ -77,7 +78,8 @@
 			<div class="col-sm-8 col-sm-offset-2">
 				<div class="row vertical-align">
 					<div class="col-xs-12 col-md-8">
-						<img src="https://img.itch.zone/aW1hZ2UvNTU5NTE3LzI5OTQyMTkucG5n/original/TP5kQ1.png"
+						<img src="assets/img/deteriorating-dad.png"
+							alt="Deteriorating Dad Screenshot"
 							class="img-responsive work-item-img center-block">
 					</div>
 					<div class="col-xs-12 col-md-4">
@@ -106,7 +108,8 @@
 			<div class="col-sm-8 col-sm-offset-2">
 				<div class="row vertical-align">
 					<div class="col-xs-12 col-md-8">
-						<img src="https://github.com/zacharysarette/piano-toy/raw/master/screenshots/PianoToyDeskTopScreenShot.PNG"
+						<img src="assets/img/PianoToyDeskTopScreenShot.png"
+							alt="Piano Toy screenshot"
 							class="img-responsive work-item-img center-block">
 					</div>
 					<div class="col-xs-12 col-md-4">
@@ -133,8 +136,10 @@
 			<div class="col-sm-8 col-sm-offset-2">
 				<div class="row vertical-align">
 					<div class="col-xs-12 col-md-8">
-						<img src="https://raw.githubusercontent.com/zacharysarette/a-404-page/master/screenshot.png"
-							class="img-responsive work-item-img center-block" alt="a 404 page screenshot">
+						<img src="assets/img/404NotFound.png"
+							alt="a 404 page screenshot"
+							class="img-responsive work-item-img center-block"
+						>
 					</div>
 					<div class="col-xs-12 col-md-4">
 						<h2>
@@ -159,8 +164,10 @@
 			<div class="col-sm-8 col-sm-offset-2">
 				<div class="row vertical-align">
 					<div class="col-xs-12 col-md-8">
-						<img src="https://raw.githubusercontent.com/zacharysarette/reusable-components/master/screenshot.PNG"
-							class="img-responsive work-item-img center-block" alt="a reusable-components page screenshot">
+						<img src="assets/img/reusable-components.png"
+							alt="a reusable-components page screenshot"
+							class="img-responsive work-item-img center-block"
+						>
 					</div>
 					<div class="col-xs-12 col-md-4">
 						<h2>
