Adds correct type for favicon

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
 	<link rel="icon" 
-				type="image/png" 
+				type="image/x-icon" 
 				href="favicon.ico" />
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
