--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 	<link rel="stylesheet"
 		href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
-	<link rel="icon" 
-				type="image/x-icon" 
-				href="favicon.ico" />
+		<link rel='icon' href='favicon.ico' type='image/x-icon' />
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- Leave those next 4 lines if you care about users using IE8 -->
