Adds super todo list app

--- a/index.html
+++ b/index.html
@@ -192,6 +192,41 @@
 				</div>
 			</div>
 		</div>
+		<div class="row repo-row">
+			<div class="col-sm-8 col-sm-offset-2">
+				<div class="row vertical-align">
+					<div class="col-xs-12 col-md-8">
+						<img src="assets/img/super-todo-list.png"
+							alt="a reusable-components page screenshot"
+							class="img-responsive work-item-img center-block"
+						>
+					</div>
+					<div class="col-xs-12 col-md-4">
+						<h2>
+							<a href="https://epic-hamilton-18fa47.netlify.app" target="blank">Super Todo List</a>
+						</h2>
+						<p>A simple todo list app made with ReactJS.</p>
+					</div>
+				</div>
+				<div class="row text-center techUsed">
+					<div class="col-xs-12">
+						<i class="devicon-react-original-wordmark colored"></i>
+						<i class="devicon-javascript-plain colored">
+						</i>
+					</div>
+				</div>
+			</div>
+			<div class="row text-center" style="margin:20px;">
+					<div class="col-xs-12">
+				<a class="btn btn-launch" href="https://github.com/zacharysarette/super-todo-list" target="blank">
+					View on Github
+				</a>
+				<a class="btn btn-launch" href="https://pensive-dubinsky-ef8885.netlify.app/" target="blank">
+					Visit Site
+				</a>
+				</div>
+			</div>
+		</div>
 	</section>
 	<div class="row row-footer text-center">
 		<div class="col">
