--- a/index.html
+++ b/index.html
@@ -196,6 +196,40 @@
 			<div class="col-sm-8 col-sm-offset-2">
 				<div class="row vertical-align">
 					<div class="col-xs-12 col-md-8">
+						<img src="assets/img/JsonRDG.png"
+							alt="a JSON Random Data Generator App page screenshot"
+							class="img-responsive work-item-img center-block"
+						>
+					</div>
+					<div class="col-xs-12 col-md-4">
+						<h2>
+							<a href="https://xenodochial-poincare-71f302.netlify.app/" target="blank">
+								JSON Random Data Generator
+							</a>
+						</h2>
+						<p>A Generator for Random Json Objects. You can save to a json file. Great a quick mock up. Progressive Web App (PWA). </p>
+					</div>
+				</div>
+				<div class="row text-center techUsed">
+					<div class="col-xs-12">
+						<i class="devicon-react-original-wordmark colored"></i>
+						<i class="devicon-javascript-plain colored">
+						</i>
+					</div>
+				</div>
+			</div>
+			<div class="row text-center" style="margin:20px;">
+					<div class="col-xs-12">
+				<a class="btn btn-launch" href="https://xenodochial-poincare-71f302.netlify.app/" target="blank">
+					Visit Site
+				</a>
+				</div>
+			</div>
+		</div>
+		<div class="row repo-row">
+			<div class="col-sm-8 col-sm-offset-2">
+				<div class="row vertical-align">
+					<div class="col-xs-12 col-md-8">
 						<img src="assets/img/super-todo-list.png"
 							alt="a reusable-components page screenshot"
 							class="img-responsive work-item-img center-block"
@@ -231,7 +265,7 @@
 	<div class="row row-footer text-center">
 		<div class="col">
 			<div style="margin:50px;">
-				<h3 style="margin:50px 0 15px">I'm available for work, get in touch.</h3>
+				<h3 style="margin:50px 0 15px">I'm looking for interesting projects. Send me a message.</h3>
 				<a href="https://twitter.com/SuperRocketZach" target="blank"> Twitter </a>
 			</div>
 		</div>
