--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
 				<img src="/assets/img/profile.png" width=200 class="profile-pic">
 				<h1>Zach Sarette</h1>
 				<h3>Tokyo, Japan</h3>
-				<h5>Full Stack Web developer, Former Game Developer.</h5>
-				<h5>A passion for Automation, Systems, and Tools.</h5>
-				<h5>In my free time I like to practice the piano and join game jams.</h5>
+				<h5>Front end developer.</h5>
+				<h5>Former full stack web and game developer.</h5>
+				<h5>Can't live without vim or at least vim key bindings.</h5>
+				<h5>learning piano and playing board games with friends online in my free time.</h5>
 			</div>
 		</section>
 	</div>
 	<div class="text-center" style="margin-top:100px">
-		<h1>Projects</h1>
+		<h1>projects</h1>
 	</div>
 	<section class="repos">
 		<div class="row repo-row">
@@ -55,7 +56,7 @@
 							<a href="https://thirsty-wilson-a455c4.netlify.app/" target="blank">beautiful-cat-facts</a>
 						</h2>
 						<p>This is a VueJS cat fact application</p>
-						<p>View hundreds of catfacts and enjoy cute pictures of cats. There is also a mini card game built in. Relax
+						<p>View hundreds of cat facts and enjoy cute pictures of cats. There is also a mini card game built in. Relax
 							and enjoy beautiful-cat-facts</p>
 					</div>
 				</div>
@@ -87,7 +88,7 @@
 						<p>This is a game built for the Global Game Jam 2020</p>
 						<p>I did the art, the web build, and fixed the audio system during the game jam.
 						<p>
-						<p>After the jam, I fixed all of the major bugs, improved the gameplay, ui, and sfx. And finally I localized
+						<p>After the jam, I fixed all of the major bugs, improved the game play, ui, and sfx. And finally I localized
 							the game from Japanese to English.</p>
 					</div>
 				</div>
