--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 								JSON Random Data Generator
 							</a>
 						</h2>
-						<p>A Generator for Random Json Objects. You can save to a json file. Great a quick mock up. Progressive Web App (PWA). </p>
+						<p>A Generator for Random Json Objects. You can save to a json file. Great for a quick mock up. Progressive Web App (PWA). </p>
 					</div>
 				</div>
 				<div class="row text-center techUsed">
