Updates with new app

--- a/index.html
+++ b/index.html
@@ -47,6 +47,33 @@
 				<div class="row vertical-align">
 					<div class="col-xs-12 col-md-8">
 						<img
+							src="assets/img/eightBitScreenShot.png"
+							alt="8 bit binary quiz app screenshot"
+							class="img-responsive work-item-img center-block">
+					</div>
+					<div class="col-xs-12 col-md-4">
+						<h2>
+							<a href="https://friendly-haibt-dd59ff.netlify.app/" target="blank">8 Bit Binary Quiz</a>
+						</h2>
+						<p>This is a PWA quiz app for converting 8-bit binary numbers to decimal and vice versa.</p>
+					</div>
+				</div>
+				<div class="row text-center techUsed">
+					<div class="col-xs-12">
+						<i class="devicon-react-original-wordmark"></i>
+						<i class="devicon-typescript-plain"></i>
+					</div>
+				</div>
+				<div class="row text-center" style="margin:20px;">
+					<a class="btn btn-launch" href="https://friendly-haibt-dd59ff.netlify.app/" target="blank">Visit Site</a>
+				</div>
+			</div>
+		</div>
+		<div class="row repo-row">
+			<div class="col-sm-8 col-sm-offset-2">
+				<div class="row vertical-align">
+					<div class="col-xs-12 col-md-8">
+						<img
 							src="assets/img/beautiful-cat-facts-desktop-dark.png"
 							alt="beautiful-cat-facts screenshot"
 							class="img-responsive work-item-img center-block">
@@ -62,8 +89,8 @@
 				</div>
 				<div class="row text-center techUsed">
 					<div class="col-xs-12">
-						<i class="devicon-vuejs-plain-wordmark"></i>
-						<i class="devicon-javascript-plain"></i>
+						<i class="devicon-vuejs-plain-wordmark colored"></i>
+						<i class="devicon-javascript-plain colored"></i>
 					</div>
 				</div>
 				<div class="row text-center" style="margin:20px;">
@@ -213,8 +240,8 @@
 				</div>
 				<div class="row text-center techUsed">
 					<div class="col-xs-12">
-						<i class="devicon-react-original-wordmark colored"></i>
-						<i class="devicon-javascript-plain colored">
+						<i class="devicon-react-original-wordmark"></i>
+						<i class="devicon-javascript-plain">
 						</i>
 					</div>
 				</div>
@@ -280,3 +307,4 @@
 	<!-- <script src="js/myScripts.js"></script> -->
 </body>
 </html>
+
